--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -23,7 +23,7 @@
  br_je_conference_of_poznan_tt_4: "#v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! has accepted the outcome of the Conference"
  br_je_conference_of_poznan_tt_3: "Either #v [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! or #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#! have rejected the outcome of the conference."
  br_je_conference_of_poznan_tt_5: "Hostilities have broken out between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting]#! and #v [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]#"
- poznan_conference_made_choice_tt: "We have #bold not#! backed a proposal"
+ br_poznan_conference_made_choice_tt: "We have #bold not#! backed a proposal"
  br_poznan_treaty_voting_rules: "In the case where two leading proposals receive the same number of votes, the proposal backed by the [concept_great_power] with the highest [concept_rank] will be chosen."
  
  #Scripted Button loc
@@ -35,70 +35,70 @@
  br_fate_of_prussia_button_desc: "We will decide on what will happen to the state of [SCOPE.sCountry('br_prussia_scope').GetName]"
  br_counter_offer_button: "Give a counter offer"
  br_counter_offer_button_desc: "#v TODO#!"
- we_chose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will officially favour this proposal."
- we_unchose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will no longer officially favour this proposal."
- poznan_conference_approve_button: "Ratify the Treaty of Poznan"
- poznan_conference_approve_button_desc: "The agreed upon proposal is acceptable. Instruct our men in Poznan to sign the document."
- poznan_conference_approve_button_tt: "[ROOT.GetCountry.GetName] ratifies the treaty. Should both [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] agree, the treaty will then enter into effect."
- poznan_conference_disapprove_button: "Refuse to Sign"
- poznan_conference_disapprove_button_desc: "This outcome does not serve [ROOT.GetCountry.GetAdjectiveNoFormatting] interests. We will not put our names to this scrap of paper."
- poznan_conference_disapprove_button_tt: "Negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] will break down."
- poznan_conference_has_concluded_loc: "The Poznan Conference has concluded."
+ br_we_chose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will officially favour this proposal."
+ br_we_unchose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will no longer officially favour this proposal."
+ br_poznan_conference_approve_button: "Ratify the Treaty of Poznan"
+ br_poznan_conference_approve_button_desc: "The agreed upon proposal is acceptable. Instruct our men in Poznan to sign the document."
+ br_poznan_conference_approve_button_tt: "[ROOT.GetCountry.GetName] ratifies the treaty. Should both [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] agree, the treaty will then enter into effect."
+ br_poznan_conference_disapprove_button: "Refuse to Sign"
+ br_poznan_conference_disapprove_button_desc: "This outcome does not serve [ROOT.GetCountry.GetAdjectiveNoFormatting] interests. We will not put our names to this scrap of paper."
+ br_poznan_conference_disapprove_button_tt: "Negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] will break down."
+ br_poznan_conference_has_concluded_loc: "The Poznan Conference has concluded."
 
  #Journal events loc
- treaty_of_poznan_events.1.t: "The Baltic Question"
- treaty_of_poznan_events.1.d: "The german people in the proces of unification now look to the baltic holdings of the [SCOPE.sCountry('br_commonwealth_scope').GetName], facing internal issues themselfs the [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] has called for a conference to be held instead in the hope that they could perhaps prevent war."
- treaty_of_poznan_events.1.f: "'The [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] seeks to unify with the baltic german people.'"
- treaty_of_poznan_events.1.a: "Agreed. Call for a conference to settle the matter at last."
- #treaty_of_poznan_events.1.b: "We do not negotiate with the enemy."
- treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]."
+ br_treaty_of_poznan_events.1.t: "The Baltic Question"
+ br_treaty_of_poznan_events.1.d: "The german people in the proces of unification now look to the baltic holdings of the [SCOPE.sCountry('br_commonwealth_scope').GetName], facing internal issues themselfs the [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] has called for a conference to be held instead in the hope that they could perhaps prevent war."
+ br_treaty_of_poznan_events.1.f: "'The [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] seeks to unify with the baltic german people.'"
+ br_treaty_of_poznan_events.1.a: "Agreed. Call for a conference to settle the matter at last."
+ #br_treaty_of_poznan_events.1.b: "We do not negotiate with the enemy."
+ br_treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]."
 
- treaty_of_poznan_events.2.t: "Poznan Calling"
- treaty_of_poznan_events.2.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
- treaty_of_poznan_events.2.f: "'So now the Germans desire the Baltic? No doubt they have their eyes firmly fixed on rightful Polish soil. A refusal to compromise might harm the current peace in Europe.'"
- treaty_of_poznan_events.2.a: "Interesting."
+ br_treaty_of_poznan_events.2.t: "Poznan Calling"
+ br_treaty_of_poznan_events.2.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
+ br_treaty_of_poznan_events.2.f: "'So now the Germans desire the Baltic? No doubt they have their eyes firmly fixed on rightful Polish soil. A refusal to compromise might harm the current peace in Europe.'"
+ br_treaty_of_poznan_events.2.a: "Interesting."
 
- treaty_of_poznan_events.3.t: "Poznan Calling"
- treaty_of_poznan_events.3.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
- treaty_of_poznan_events.3.f: "'So now the Germans desire the Baltic? No doubt they have their eyes firmly fixed on rightful Polish soil. A refusal to compromise might harm the current peace in Europe.'"
- treaty_of_poznan_events.3.a: "Interesting."
+ br_treaty_of_poznan_events.3.t: "Poznan Calling"
+ br_treaty_of_poznan_events.3.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
+ br_treaty_of_poznan_events.3.f: "'So now the Germans desire the Baltic? No doubt they have their eyes firmly fixed on rightful Polish soil. A refusal to compromise might harm the current peace in Europe.'"
+ br_treaty_of_poznan_events.3.a: "Interesting."
 
- treaty_of_poznan_events.4.t: "Poznan Conference Concludes"
- treaty_of_poznan_events.4.d: "The conference has concluded"
- treaty_of_poznan_events.4.f: "#bold European Powers Guarantee Peace and Stability#!\nThe newly ratified Treaty of Poznan is a cornerstone of European peace."
- treaty_of_poznan_events.4.a: "For peace in our time, hurrah!"
+ br_treaty_of_poznan_events.4.t: "Poznan Conference Concludes"
+ br_treaty_of_poznan_events.4.d: "The conference has concluded"
+ br_treaty_of_poznan_events.4.f: "#bold European Powers Guarantee Peace and Stability#!\nThe newly ratified Treaty of Poznan is a cornerstone of European peace."
+ br_treaty_of_poznan_events.4.a: "For peace in our time, hurrah!"
  guarantors_of_peace_modifier: "Guarantor of Peace"
 
- treaty_of_poznan_events.5.t: "Failure of the Poznan Conference"
- treaty_of_poznan_events.5.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having broken down in full, it would appear that a diplomatic solution to the Belgian question has eluded Europe once again."
- treaty_of_poznan_events.5.f: "As the delegations made their way out of the Foreign Office and onto King Charles Street, the air of amicability that they so deperately tried to maintain could not even fool the doorman — much less each other. What this would mean for future Dutch-Belgian relations they could still not say, but that it would be bad? Now at last, there was something they could agree on."
- treaty_of_poznan_events.5.a: "What a waste of everybody's time."
+ br_treaty_of_poznan_events.5.t: "Failure of the Poznan Conference"
+ br_treaty_of_poznan_events.5.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having broken down in full, it would appear that a diplomatic solution to the Belgian question has eluded Europe once again."
+ br_treaty_of_poznan_events.5.f: "As the delegations made their way out of the Foreign Office and onto King Charles Street, the air of amicability that they so deperately tried to maintain could not even fool the doorman — much less each other. What this would mean for future Dutch-Belgian relations they could still not say, but that it would be bad? Now at last, there was something they could agree on."
+ br_treaty_of_poznan_events.5.a: "What a waste of everybody's time."
  
- treaty_of_poznan_events.6.t: "End of the Poznan Conference?"
- treaty_of_poznan_events.6.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having gone on for a wile, it would appear that Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
- treaty_of_poznan_events.6.f: "Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
- treaty_of_poznan_events.6.a: "Extend the conference."
- treaty_of_poznan_events.6.b: "Do not extend the conference."
+ br_treaty_of_poznan_events.6.t: "End of the Poznan Conference?"
+ br_treaty_of_poznan_events.6.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having gone on for a wile, it would appear that Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
+ br_treaty_of_poznan_events.6.f: "Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
+ br_treaty_of_poznan_events.6.a: "Extend the conference."
+ br_treaty_of_poznan_events.6.b: "Do not extend the conference."
  br_the_poznan_conference_will_end_tt: "We will chose to not extend the conference, so the conference of Poznan will end."
 
- treaty_of_poznan_events.7.t: "End of the Poznan Conference?"
- treaty_of_poznan_events.7.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having gone on for a wile, it would appear that Our time has run up, the congress is at an end, however it seems that [SCOPE.sCountry('br_north_german_federation_scope').GetName] isn't satisfied yet with the current arrangements and they have asked to extend the conference for 3 months. \n\n Will we accept"
- treaty_of_poznan_events.7.f: "Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
- treaty_of_poznan_events.7.a: "Extend the conference."
- treaty_of_poznan_events.7.b: "Do not extend the conference."
+ br_treaty_of_poznan_events.7.t: "End of the Poznan Conference?"
+ br_treaty_of_poznan_events.7.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having gone on for a wile, it would appear that Our time has run up, the congress is at an end, however it seems that [SCOPE.sCountry('br_north_german_federation_scope').GetName] isn't satisfied yet with the current arrangements and they have asked to extend the conference for 3 months. \n\n Will we accept"
+ br_treaty_of_poznan_events.7.f: "Our time has run up, the congress is at an end, if we are satisfied we can end the congress here and ratify the treaty. But if we are not satisfied with the current treaty perhaps we can extend the congress for a bit longer."
+ br_treaty_of_poznan_events.7.a: "Extend the conference."
+ br_treaty_of_poznan_events.7.b: "Do not extend the conference."
 
- treaty_of_poznan_events.8.t: "The Fate of Prussia"
- treaty_of_poznan_events.8.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] ongoing, we must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
- treaty_of_poznan_events.8.f: "We must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
- treaty_of_poznan_events.8.a: "Prussia must be independent"
- treaty_of_poznan_events.8.b: "[SCOPE.sCountry('br_commonwealth_scope').GetName] keeps Prussia as a subject"
- treaty_of_poznan_events.8.c: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will subjugate Prussia"
- treaty_of_poznan_events.8.e: "[SCOPE.sCountry('br_commonwealth_scope').GetName] will annex Prussia"
- treaty_of_poznan_events.8.g: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will annex Prussia"
- treaty_of_poznan_events.8.h: "Give $STATE_EAST_PRUSSIA$ to Prussia"
- treaty_of_poznan_events.8.i: "What a waste of everybody's time."
+ br_treaty_of_poznan_events.8.t: "The Fate of Prussia"
+ br_treaty_of_poznan_events.8.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] ongoing, we must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
+ br_treaty_of_poznan_events.8.f: "We must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
+ br_treaty_of_poznan_events.8.a: "Prussia must be independent"
+ br_treaty_of_poznan_events.8.b: "[SCOPE.sCountry('br_commonwealth_scope').GetName] keeps Prussia as a subject"
+ br_treaty_of_poznan_events.8.c: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will subjugate Prussia"
+ br_treaty_of_poznan_events.8.e: "[SCOPE.sCountry('br_commonwealth_scope').GetName] will annex Prussia"
+ br_treaty_of_poznan_events.8.g: "[SCOPE.sCountry('br_north_german_federation_scope').GetName] will annex Prussia"
+ br_treaty_of_poznan_events.8.h: "Give $STATE_EAST_PRUSSIA$ to Prussia"
+ br_treaty_of_poznan_events.8.i: "What a waste of everybody's time."
  br_finished_deciding_prussia_tt: "We have finished deciding on the Fate of Prussia"
 
  #mics
- not_yet_settled_loc: "not yet concluded."
- treaty_of_poznan_outcome_tt: "Territory will be exchanged between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] in accordance with their treaty obligations."
+ br_not_yet_settled_loc: "not yet concluded."
+ br_treaty_of_poznan_outcome_tt: "Territory will be exchanged between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] in accordance with their treaty obligations."
