removed unnecessary commented code
-removed dead code

--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -51,7 +51,7 @@
  br_treaty_of_poznan_events.1.f: "'The [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] seeks to unify with the baltic german people.'"
  br_treaty_of_poznan_events.1.a: "Agreed. Call for a conference to settle the matter at last."
  #br_treaty_of_poznan_events.1.b: "We do not negotiate with the enemy."
- br_treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]."
+ #br_treaty_of_poznan_explanation_tt: "Participating [Concept('concept_great_power', '$concept_great_powers$')] will vote on a solution to be ratified by [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting]."
 
  br_treaty_of_poznan_events.2.t: "Poznan Calling"
  br_treaty_of_poznan_events.2.d: "Weary of the uneasy peace existing between the germans and polish people, have decided to hold a conference in Poznan to resolve their current territorial and legal disputes."
@@ -67,7 +67,6 @@
  br_treaty_of_poznan_events.4.d: "The conference has concluded"
  br_treaty_of_poznan_events.4.f: "#bold European Powers Guarantee Peace and Stability#!\nThe newly ratified Treaty of Poznan is a cornerstone of European peace."
  br_treaty_of_poznan_events.4.a: "For peace in our time, hurrah!"
- guarantors_of_peace_modifier: "Guarantor of Peace"
 
  br_treaty_of_poznan_events.5.t: "Failure of the Poznan Conference"
  br_treaty_of_poznan_events.5.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] having broken down in full, it would appear that a diplomatic solution to the Belgian question has eluded Europe once again."
