--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -12,17 +12,20 @@
  br_je_conference_of_poznan_reason: "The great powers have sent their delegations to Poznan to decide on a solution to the unsolved border issues between [SCOPE.sCountry('br_north_german_federation_scope').GetName] and [SCOPE.sCountry('br_commonwealth_scope').GetName]. \n\n#b #blue List of demands:#!#!\n$br_poznan_conference_je_reason_loc_taken_demands_loc$ \n\nThe conference will conclude in #variable [GetGlobalVariable('br_je_conference_of_poznan_timer').GetValue]#! months. The proposals listed above be selected as the conference's offical solution."
  
  #JE demands loc
- br_poznan_conference_je_reason_loc_taken_demands_loc: "[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_poznan')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_pomorze')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_fate')]\n"
+ br_poznan_conference_je_reason_loc_taken_demands_loc: "[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_poznan')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_pomorze')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_fate')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_given_counter_offers')]\n"
  br_poznan_conference_je_reason_loc_empty_string_loc: "" #this loc is an standard empty string
  br_poznan_conference_je_reason_loc_demand_poznan_loc: "State of #v $STATE_POSEN$#! will be transfered to [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]\n"
  br_poznan_conference_je_reason_loc_demand_pomorze_loc: "State of #v $STATE_WEST_PRUSSIA$#! will be transfered to [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]\n"
- br_poznan_conference_je_reason_loc_demand_prussia_fate_loc: "[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_sovereignty')]\n[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_expand')]"
- br_poznan_conference_je_reason_loc_is_demanding_independence_of_prussia_loc: "Prussia will become independed."
- br_poznan_conference_je_reason_loc_is_demanding_plc_subjugation_of_prussia_loc: "Prussia will be subjugated by [GetGlobalVariable( 'br_poznan_conference_target' ).GetCountry.GetNameNoFormatting]."
- br_poznan_conference_je_reason_loc_is_demanding_ngf_subjugation_of_prussia_loc: "Prussia will be subjugated by [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]."
- br_poznan_conference_je_reason_loc_is_demanding_plc_annexation_of_prussia_loc: "Prussia will be annexed by [GetGlobalVariable( 'br_poznan_conference_target' ).GetCountry.GetNameNoFormatting]."
- br_poznan_conference_je_reason_loc_is_demanding_ngf_annexation_of_prussia_loc: "Prussia will be annexed by [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]."
- br_poznan_conference_je_reason_loc_demand_prussia_expand_loc: "Prussia will gain $STATE_EAST_PRUSSIA$"
+ br_poznan_conference_je_reason_loc_demand_prussia_fate_loc: "[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_sovereignty')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_expand')]"
+ br_poznan_conference_je_reason_loc_is_demanding_independence_of_prussia_loc: "Prussia will become independed.\n"
+ br_poznan_conference_je_reason_loc_is_demanding_plc_subjugation_of_prussia_loc: "Prussia will be subjugated by [GetGlobalVariable( 'br_poznan_conference_target' ).GetCountry.GetNameNoFormatting].\n"
+ br_poznan_conference_je_reason_loc_is_demanding_ngf_subjugation_of_prussia_loc: "Prussia will be subjugated by [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting].\n"
+ br_poznan_conference_je_reason_loc_is_demanding_plc_annexation_of_prussia_loc: "Prussia will be annexed by [GetGlobalVariable( 'br_poznan_conference_target' ).GetCountry.GetNameNoFormatting].\n"
+ br_poznan_conference_je_reason_loc_is_demanding_ngf_annexation_of_prussia_loc: "Prussia will be annexed by [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting].\n"
+ br_poznan_conference_je_reason_loc_demand_prussia_expand_loc: "Prussia will gain $STATE_EAST_PRUSSIA$ \n"
+ br_poznan_conference_je_reason_loc_given_counter_offers_loc: "[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_given_counter_offers_debt_compensation')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_given_counter_offers_investment_rights')]"
+ br_poznan_conference_je_reason_loc_given_counter_offers_debt_compensation_loc: "$br_ngf_NF_loc$ will take on all of $br_plc_NF_loc$ debt \n"
+ br_poznan_conference_je_reason_loc_given_counter_offers_investment_rights_loc: "$br_ngf_NF_loc$ will grant $br_plc_NF_loc$ foreign investment rights \n"
  
 
  br_je_conference_of_poznan_tt_1: "The Conference has decided how to settle the Baltic question."
@@ -41,7 +44,7 @@
  br_fate_of_prussia_button: "Decide on the fate of Prussia"
  br_fate_of_prussia_button_desc: "We will decide on what will happen to the state of [SCOPE.sCountry('br_prussia_scope').GetName]"
  br_counter_offer_button: "Give a counter offer"
- br_counter_offer_button_desc: "#v TODO#!"
+ br_counter_offer_button_desc: "We will decide on if we are going to give $br_plc_NF_loc$ a counter offer as compensation for our demands."
  br_we_chose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will officially favour this proposal."
  br_we_unchose_this_br_poznan_treaty_tt: "[ROOT.GetCountry.GetName] will no longer officially favour this proposal."
  br_poznan_conference_approve_button: "Ratify the Treaty of Poznan"
@@ -52,7 +55,10 @@
  br_poznan_conference_disapprove_button_tt: "Negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] and [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] will break down."
  br_poznan_conference_has_concluded_loc: "The Poznan Conference has concluded."
 
- #Journal events loc
+
+ ##
+ ##Journal events loc
+ ##
  br_treaty_of_poznan_events.1.t: "The Baltic Question"
  br_treaty_of_poznan_events.1.d: "The german people in the proces of unification now look to the baltic holdings of the [SCOPE.sCountry('br_commonwealth_scope').GetName], facing internal issues themselfs the [SCOPE.sCountry('br_commonwealth_scope').GetNameNoFormatting] has called for a conference to be held instead in the hope that they could perhaps prevent war."
  br_treaty_of_poznan_events.1.f: "'The [SCOPE.sCountry('br_north_german_federation_scope').GetNameNoFormatting] seeks to unify with the baltic german people.'"
@@ -93,6 +99,7 @@
  br_treaty_of_poznan_events.7.a: "Extend the conference."
  br_treaty_of_poznan_events.7.b: "Do not extend the conference."
 
+ #event 8 (Prussian fate)
  br_treaty_of_poznan_events.8.t: "The Fate of Prussia"
  br_treaty_of_poznan_events.8.d: "With negotiations between [SCOPE.sCountry('br_commonwealth_scope').GetName] and [SCOPE.sCountry('br_north_german_federation_scope').GetName] ongoing, we must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen."
  br_treaty_of_poznan_events.8.f: "We must decide what to do with the state of Prussia a german state but currently a vassal of [SCOPE.sCountry('br_commonwealth_scope').GetName], this situation can not stand, something has to happen. \n\n#b #blue Current Demands:#!#! \n$br_poznan_conference_je_reason_loc_demand_prussia_fate_loc$"
@@ -125,6 +132,22 @@
  #option i
  br_treaty_of_poznan_events.8.i: "What a waste of everybody's time."
  br_finished_deciding_prussia_tt: "We have finished deciding on the Fate of Prussia"
+
+ #event 9 (Counter offer)
+ br_treaty_of_poznan_events.9.t: "A counter offer"
+ br_treaty_of_poznan_events.9.d: "With negotiations between $br_plc_loc$ and $br_ngf_loc$ ongoing, we must decide, if we are going to offer the $br_plc_NF_loc$ anything in return for what we are asking."
+ br_treaty_of_poznan_events.9.f: "We must decide, if we are going to offer the $br_plc_loc$ anything in return for what we are asking. \n\n#b #blue Current Demands:#!#! \n$br_poznan_conference_je_reason_loc_given_counter_offers_loc$"
+ #option a
+ br_treaty_of_poznan_events.9.a: "[GetPlayer.GetCustom('br_poznan_conference_event_loc_offering_initiator_takes_on_target_total_debt')]"
+ br_poznan_conference_event_loc_start_offering_initiator_takes_on_target_total_debt_loc: "$br_ngf_loc$ will take on all of $br_plc_loc$ debt"
+ br_poznan_conference_event_loc_stop_offering_initiator_takes_on_target_total_debt_loc: "$br_ngf_loc$ will no longer take on all of $br_plc_loc$ debt"
+ #option b
+ br_treaty_of_poznan_events.9.b: "[GetPlayer.GetCustom('br_poznan_conference_event_loc_offering_target_investment_rights')]"
+ br_poznan_conference_event_loc_start_offering_target_investment_rights_loc: "$br_ngf_loc$ will grant $br_plc_loc$ foreign investment rights"
+ br_poznan_conference_event_loc_stop_offering_target_investment_rights_loc: "$br_ngf_loc$ will no longer grant $br_plc_loc$ foreign investment rights"
+ #option i
+ br_treaty_of_poznan_events.9.i: "What a waste of everybody's time."
+ br_finished_deciding_on_counter_offer_tt: "We have finished deciding on counter offers"
 
  #mics
  br_not_yet_settled_loc: "not yet concluded."
