--- a/localization/english/br_poznan_conference_l_english.yml
+++ b/localization/english/br_poznan_conference_l_english.yml
@@ -17,7 +17,7 @@
  br_poznan_conference_je_reason_loc_demand_poznan_loc: "State of #v $STATE_POSEN$#! will be transfered to [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]\n"
  br_poznan_conference_je_reason_loc_demand_pomorze_loc: "State of #v $STATE_WEST_PRUSSIA$#! will be transfered to [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting]\n"
  br_poznan_conference_je_reason_loc_demand_prussia_fate_loc: "[GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_sovereignty')][GetPlayer.GetCustom('br_poznan_conference_je_reason_loc_demand_prussia_expand')]"
- br_poznan_conference_je_reason_loc_is_demanding_independence_of_prussia_loc: "Prussia will become independed.\n"
+ br_poznan_conference_je_reason_loc_is_demanding_independence_of_prussia_loc: "Prussia will become independent.\n"
  br_poznan_conference_je_reason_loc_is_demanding_plc_subjugation_of_prussia_loc: "Prussia will be subjugated by [GetGlobalVariable( 'br_poznan_conference_target' ).GetCountry.GetNameNoFormatting].\n"
  br_poznan_conference_je_reason_loc_is_demanding_ngf_subjugation_of_prussia_loc: "Prussia will be subjugated by [GetGlobalVariable( 'br_poznan_conference_initiator' ).GetCountry.GetNameNoFormatting].\n"
  br_poznan_conference_je_reason_loc_is_demanding_plc_annexation_of_prussia_loc: "Prussia will be annexed by [GetGlobalVariable( 'br_poznan_conference_target' ).GetCountry.GetNameNoFormatting].\n"
