--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -118,6 +118,8 @@
  br_aquileia_ADJ: "Aquileia"
  br_new_holland: "Nieuw-Holland"
  br_new_holland_ADJ: "Dutch"
+ br_indike: "Indikēs"
+ br_indike_ADJ: "Indikēs"
 
  #New World
  br_klein_venedig: "Klein-Venedig"
