--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -1661,8 +1661,8 @@
  HUB_NAME_STATE_CENTRAL_INDIA_mine: "Rewa"
  HUB_NAME_STATE_CENTRAL_INDIA_farm: "Gwalior"
  HUB_NAME_STATE_CENTRAL_INDIA_wood: "Bhopal"
- HUB_NAME_STATE_BOMBAY_city: "Bombay"
- HUB_NAME_STATE_BOMBAY_port: "Nova Goa"
+ HUB_NAME_STATE_BOMBAY_city: "Mombē"
+ HUB_NAME_STATE_BOMBAY_port: "Chrysolithos"
  HUB_NAME_STATE_BOMBAY_mine: "Dhule"
  HUB_NAME_STATE_BOMBAY_farm: "Ratnagiri"
  HUB_NAME_STATE_BOMBAY_wood: "Belgaum"
