--- a/localization/english/br_flavor_events_l_english.yml
+++ b/localization/english/br_flavor_events_l_english.yml
@@ -35,10 +35,10 @@
  br_nation_startup_event.7.f: "Dutch flavor story in progress"
  br_nation_startup_event.7.a: "Dutch"
 
- br_nation_startup_event.8.t: "India"
- br_nation_startup_event.8.d: "India"
- br_nation_startup_event.8.f: "India flavor story in progress"
- br_nation_startup_event.8.a: "India"
+ br_nation_startup_event.8.t: "A Golden Thread Across the Waters"
+ br_nation_startup_event.8.d: "Founded in the year 1603 by decree of Tibérios Palaiologos, last undisputed Basileus of the Eastern Roman Empire, the Emporikē Hetaireia tēs Indikēs was envisioned as a beacon of imperial commerce, ambition, and maritime power. With Chrysolithos — the gleaming jewel of the western Indian coast — as its beating heart, the Company now spans a vast trade network across the Indian Ocean: from bustling ports along the Red Sea and Madagascar to outposts in India and a solitary yet precious foothold on the Chinese coast."
+ br_nation_startup_event.8.f: "Though its golden seal bears the mark of Constantinople, time has weathered the Empire. With the Basileia fractured and distant, the Company now finds sanctuary and strength in the Exarchate of Aigyptios, whose control of the Klysma Canal and Alexandria ensures the continued flow of goods to imperial markets. Despite the Empire’s fragmentation, the Company remains deeply entwined in its economic bloodstream — both a servant and a sovereign.Ties with the great powers of India have remained stable — but tense. In the north, the Mughal Empire maintains its grandeur, while to the south, the Maratha Confederations rise like firestorms from the Deccan. Whispers of war crackle along the coasts, and the Company’s holdings sit directly in the path of the coming storm."
+ br_nation_startup_event.8.a: "Riches of the East!"
 
  br_nation_startup_event.9.t: "Holy Roman Empire"
  br_nation_startup_event.9.d: "The Holy Roman Empire: Charlegmagne’s Legacy"
