--- a/localization/english/br_flavor_events_l_english.yml
+++ b/localization/english/br_flavor_events_l_english.yml
@@ -5,35 +5,35 @@
  br_nation_startup_event.1.f: "The Kingdom of Serbia found itself caught in the midst of a political battleground. Hungary and the Basileia Romaion vied for influence over the Balkans, their ambitions casting a shadow over the serenity of Serbian lands. Recent turmoil in the Baselia Romaion had emboldened Hungary to assert its dominance, and Serbia had not been spared from the consequences. Subjugated by Hungarian forces, the once-independent kingdom now found itself under the yoke of foreign rule. Serbia, navigated the treacherous waters of diplomacy with a keen eye and a steady hand. Though Serbia's autonomy had been compromised, its spirit remained unbroken. Within the walls of Belgrade, defiance simmered beneath the surface, waiting for the right moment to ignite into action."
  br_nation_startup_event.1.a: "Serbia"
 
- br_nation_startup_event.2.t: "Venice"
- br_nation_startup_event.2.d: "Venice"
- br_nation_startup_event.2.f: "Venice flavor story in progress"
- br_nation_startup_event.2.a: "Venice"
+ br_nation_startup_event.2.t: "La Serenissima Ascendant"
+ br_nation_startup_event.2.d: "The Most Serene Republic of Venice greets the new century with sails full of promise. From the marble halls of the Doge’s Palace to the furthest colonial outpost, the Lion of Saint Mark watches over a realm forged not by swords, but by silk, salt, and gold. Favorable trade in Andalus, the ERE, and Tartaria fills Venetian ledgers, while new colonies bring opportunity—and ambition."
+ br_nation_startup_event.2.f: "But the winds of change blow across the Mediterranean. Rivals grow bold, and new riches lie across uncharted waters. Will Venice remain content as the jewel of commerce, or pursue a destiny yet unwritten?"
+ br_nation_startup_event.2.a: "Let gold and glory guide us."
 
- br_nation_startup_event.3.t: "Genoa"
- br_nation_startup_event.3.d: "Genoa "
- br_nation_startup_event.3.f: "Genoa flavor story in progress"
- br_nation_startup_event.3.a: "Genoa"
+ br_nation_startup_event.3.t: "Between Ledger and Lance"
+ br_nation_startup_event.3.d: "The Republic of Genoa enters a new age standing proudly between the sword and the scale. Its merchants thrive in distant courts, its bankers whisper into the ears of emperors, and its galleys carry the fruits of empires. Favor from Andalus, the ERE, and Tartaria opens doors across three continents, while Genoese flags rise above distant shores."
+ br_nation_startup_event.3.f: "Yet the world is not ruled by commerce alone. Venice sharpens its claws. The colonies beckon. The republic must choose not just where it trades—but where it rules."
+ br_nation_startup_event.3.a: "Let the Griffin rise."
 
- br_nation_startup_event.4.t: "Milan"
- br_nation_startup_event.4.d: "Milan"
- br_nation_startup_event.4.f: "Milan flavor story in progress"
- br_nation_startup_event.4.a: "Milan"
+ br_nation_startup_event.4.t: "Heart of the Steam Renaissance"
+ br_nation_startup_event.4.d: "From its marble boulevards to the churning factories of its outer districts, Milan stands as the vanguard of a new age. It was here that the Steam Renaissance first took form—where visionaries, engineers, and philosophers converge under the patronage of an Enlightened crown."
+ br_nation_startup_event.4.f: "The court pulses with invention, the universities echo with discourse, and the forges of Milan light the path toward a future shaped by reason and progress. But with industrial might comes ambition—will Milan remain content as Europe’s engine, or seize the mantle of leadership in this dawning century?"
+ br_nation_startup_event.4.a: "Let industry and intellect shape our legacy."
 
- br_nation_startup_event.5.t: "Florence"
- br_nation_startup_event.5.d: "Florence"
- br_nation_startup_event.5.f: "Florence flavor story in progress"
- br_nation_startup_event.5.a: "Florence"
+ br_nation_startup_event.5.t: "The Enlightened Garden"
+ br_nation_startup_event.5.d: "Florence awakens once more—this time not as the cradle of art, but as the citadel of progress. Beneath the guiding hand of an Enlightened sovereign, its salons, academies, and treasuries flourish alike. Wealth flows through its trade, and ideas bloom in its streets like spring in the Arno valley."
+ br_nation_startup_event.5.f: "Though less industrial than Milan, Florence’s influence lies in its culture, its science, its vision of a world governed not by superstition, but by knowledge. The question now is whether this radiant city will lead by example—or by ambition."
+ br_nation_startup_event.5.a: "Let light guide us to greatness."
 
- br_nation_startup_event.6.t: "Papal"
+ br_nation_startup_event.6.t: "The Last Throne of God"
  br_nation_startup_event.6.d: "Papal"
  br_nation_startup_event.6.f: "Papal flavor story in progress"
- br_nation_startup_event.6.a: "Papal"
+ br_nation_startup_event.6.a: "The keys of Saint Peter shall not rust."
 
- br_nation_startup_event.7.t: "Dutch"
+ br_nation_startup_event.7.t: "Trade, Tolerance, and the Tide of Progress"
  br_nation_startup_event.7.d: "Dutch"
  br_nation_startup_event.7.f: "Dutch flavor story in progress"
- br_nation_startup_event.7.a: "Dutch"
+ br_nation_startup_event.7.a: "In commerce and reason, we find our crown"
 
  br_nation_startup_event.8.t: "A Golden Thread Across the Waters"
  br_nation_startup_event.8.d: "Founded in the year 1603 by decree of Tibérios Palaiologos, last undisputed Basileus of the Eastern Roman Empire, the Emporikē Hetaireia tēs Indikēs was envisioned as a beacon of imperial commerce, ambition, and maritime power. With Chrysolithos — the gleaming jewel of the western Indian coast — as its beating heart, the Company now spans a vast trade network across the Indian Ocean: from bustling ports along the Red Sea and Madagascar to outposts in India and a solitary yet precious foothold on the Chinese coast."
@@ -89,3 +89,8 @@
  br_nation_startup_event.17.d: "From the haze of the desert dawn, the Nile winds like a green ribbon through gold, carrying with it whispers of gods, empires, and betrayals. This is Aegyptios—Rome’s oldest shadow and its most vital artery, where minarets rise beside marble domes, and the world’s wealth flows through ports lined with Latin merchants and Komnenian banners."
  br_nation_startup_event.17.f: "Centuries ago, the Komnenos dynasty ruled all of Rome from the gleaming capital of Konstantinople. They were emperors of conquest and renewal—until decadence hollowed their throne and Tibérios Palaiologos seized power in a bloodly coup. The dynasty fled, but they did not fall. In the sun-baked heart of Aegypt, where loyalty to their line had never faded, the Komnenoi returned. With the people at their back and the Exarch overthrown, they reclaimed a fragment of their birthright and shattered the illusion of imperial unity. What rose in Aegypt was not a rebellion, but a resurrection. Backed by Venetian coin and Genoese fleets, the Komnenoi forged a realm of commerce and defiance—de facto sovereign, but nominally bound to the Basileus they once were. Their rule rests upon trade and compromise: the Aegýptian culture blends Romaioi and Coptic traditions, while the cities swell with foreign wealth and Latinoi elites. Yet the Komnenoi govern atop shifting sands. The Muslim majority, long subdued, begins to stir with dangerous resolve. The Copts remain loyal—more out of fear than faith. And the deserts beyond the Nile remain untamed, home to free tribes and Nubian kings. Now, a new Basileus rises in the north—ambitious and devout, eager to reclaim Aegypt for Constantinople and to extinguish the last Komnenian flame. The dust does not forget, and the Nile flows ever forward. What legacy will this second crown leave behind?"
  br_nation_startup_event.17.a: "The Nile remembers the empire that forgot it."
+
+ br_nation_startup_event.18.t: "The Gilded Balance"
+ br_nation_startup_event.18.d: "In the great courts of Qurtubah, sunlight spills through latticed arches onto polished marble, where philosophers debate beside merchant princes and the scent of cardamom drifts from the bazaars. Al-Andalus stands unmatched—rich, radiant, and restless."
+ br_nation_startup_event.18.f: "Once a beacon of learning and faith, Al-Andalus has become the forge of a new age. From its ports stretch vast arteries of trade and power. It governs the coasts of the Maghreb through client kings and watches over the western isles with a tempered sword. Its colonial empire, centuries in the making, spans sun-drenched plantations, silver-rich highlands, and jewel-like archipelagos. From distant factories and far harbors, wealth flows homeward—fueling invention, patronage, and ambition. The Steam Renaissance, born in Northern Italy, has found fertile ground here. Workshops hum with innovation, and great minds gather under crescent and star to shape the future. Though the Caliph remains as a ceremonial figurehead, true authority lies with councils and scholars, ministers and merchants. Al-Andalus has embraced secular governance and liberal ideals, charting a course few others dare. But the golden surface is beginning to crack. In the hills of Iberia, nationalism stirs among the Christian minority, their tongues whispering of sovereignty and stolen heritage. In the mosques and mountain strongholds, the Islamist reactionaries grow bolder, decrying the liberal order as a betrayal of faith. Neither fire has yet consumed the heartland—but both smolder, threatening to ignite. Al-Andalus stands at the edge of a blade—between past and future, faith and freedom, empire and reform. The moment demands vigilance, vision, and resolve."
+ br_nation_startup_event.18.a: "Progress is our prayer; reason, our guide."
