--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -4,21 +4,8 @@
  #purple Purples#!
  romaioi_startup_events.1.t: "Welcome to #P Basileía Romaíon#!"
  romaioi_startup_events.1.d: "Welcome to #P Basileía Romaíon 1736#! - A Sprawling Alt-History Odyssey!"
- romaioi_startup_events.1.f: "Welcome to an alternative world one hundred years earlier than base Victoria 3 where many divergent events led to a drastically different world. Primarily inspired by Roman, Medieval and Renaissance History. Combined with game-play focused on realistic simulation and balance inspired by the great Victoria 2 mods as well as Project Caesar/EU5. Join our #blue Discord#! community, show your support by rating us on #gold Steam#! and #gold PDX mods#!, and consider contributing on #green Patreon.com/romaioi#! or #green BuyMeACoffee.com/romaioi#!."
- romaioi_startup_events.1.a: "#BOLD;p Play the Game#!"
- romaioi_startup_events.1.b: "Discover Lore."
- romaioi_startup_events.1.c: "Support Development."
-
- romaioi_startup_events.2.t: "Lore of #P Basileía Romaíon#!"
- romaioi_startup_events.2.d: "Lore of #P Basileía Romaíon 1736#!"
- romaioi_startup_events.2.f: "Lore too long to fit in a single event. Check out our #blue Discord#! for more information."
- romaioi_startup_events.2.a: "#BOLD;p Play the Game#!"
- romaioi_startup_events.2.b: "Support the development of Basileía Romaíon"
-
- romaioi_startup_events.3.t: "Development of #P Basileía Romaíon#!"
- romaioi_startup_events.3.d: "Support the development of #P Basileía Romaíon#!"
- romaioi_startup_events.3.f: "If you're interested in contributing your skills, we invite you to join our development team! Message #gold Drogan#! on Discord to learn more about how you can help make Basileía Romaíon even better. #BOLD;p Mod Team:#! #P Creator#!: #gold Drogan#!, #P Developers#!: #gold Smekens#!, #gold Alexedishi#! #gold Digital_Cake#!, #gold Skjargh#!, #P Creative Support#!: #gold Jozue#!, Special Thanks: To everyone who has contributed, from reporting bugs to providing feedback, suggestions, and ideas. Your support has been invaluable! You can back our work at #green www.buymeacoffee.com/Romaioi#! or consider becoming a Patron at #green www.patreon.com/romaioi#!"
- romaioi_startup_events.3.a: "#BOLD;p Play the Game#!"
+ romaioi_startup_events.1.f: "The world stands at the threshold of a new century. From the sun-drenched palaces of Elysium to the marble courts of Konstantinople, from the bustling workshops of Northern Italy to the golden domes of Al-Andalus, history has taken a divergent course. This is not the world you know, but one shaped by a thousand different choices—where old empires endure, new powers rise, and the future belongs to those bold enough to claim it. Set over a hundred years earlier than the traditional age of industry, this is an era of awakening: of steam and scripture, of conquest and reform, of crumbling traditions and revolutionary visions. Inspired by Roman legacy, medieval grandeur, and Renaissance ambition, this world is yours to shape. Balance, depth, and historical flavor are the heart of this experience—crafted with care and sharpened by the legacy of great mods like Victoria 2, Project Caesar, and EU5. If you're interested in contributing your skills, we invite you to join our development team! Message #gold Drogan#! on Discord to learn more about how you can help make Basileía Romaíon even better. Join our community on #blue Discord#!, show your support by rating us on #gold Steam#! and #gold Paradox Mods#!, and consider contributing to development at #green Patreon.com/romaioi#! or #green BuyMeACoffee.com/romaioi#! #BOLD;p Mod Team:#! #P Creator#!: #gold Drogan#!, #P Developers#!: #gold Smekens#!, #gold Alexedishi#!, #gold Digital_Cake#!, #gold Skjargh#!, #P Creative Support#!: #gold Jozue#!, #P Special Thanks#!: To everyone who has contributed, from reporting bugs to providing feedback, suggestions, and ideas. Your support has been invaluable!"
+ romaioi_startup_events.1.a: "#BOLD;p Let the centuries unfold.#!"
 
  #serbia_rebellion.1.t: "Serbian Exarchate declares independence"
  #serbia_rebellion.1.d: "Serbian Exarchate declares independence"
