--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -23,6 +23,7 @@
  br_modifier_roman_roads: "Romaíon Infrastructure"
  br_modifier_lawless_countryside: "Lawless Countryside"
  br_modifier_national_separatism: "National Separatists"
+ br_modifier_echthros_tou_thronou: "Echthròs tou Thronou"
 
  br_modifier_muslim_cultural_discrimination: "Muslim Oppression"
  br_modifier_slavic_cultural_discrimination: "Slavic Oppression"
